CHICA-741: Removed reference to sun.misc.Base64Decoder in ServletUtil.java
CHICA-579: Growth Chart Obs Date Check- Null checking in
getGrowthChartFilename.java